--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "wandb>=0.16.3",
     "hydra-core>=1.3.2",
     "lightning>=2.2.0.post0",
+    "transformers>=4.38.2",
+    "accelerate>=0.27.2",
 ]
 
 [tool.setuptools.packages]
